showing current and next exercise only

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html class="u-full-height">
   <head>
     <title>Woop</title>
   </head>
-  <body>
-    <div id="root">
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    .u-full-height {
+      height: 100%;
+    }
+  </style>
+  <body class="u-full-height">
+    <div id="root" class="u-full-height">
     </div>
     <script src="/static/bundle.js"></script>
   </body>
