layout of workout hud

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     .u-full-height {
       height: 100%;
     }
+    .c-workout-controls {
+      height: 10%;
+      position: absolute;
+      bottom: 0;
+    }
   </style>
   <body class="u-full-height">
     <div id="root" class="u-full-height">
