--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     .u-full-height {
       height: 100%;
     }
-    .c-workout-controls {
-      height: 10%;
-      position: absolute;
-      bottom: 0;
+
+    .c-workout-display {
+      height: 100%;
     }
+
+      .c-workout-display__exercises {
+        height: calc(100% - 60px);
+        height: 90%;
+      }
+
+      .c-workout-display__controls {
+        height: calc(60px);
+        height: 10%;
+      }
   </style>
   <body class="u-full-height">
     <div id="root" class="u-full-height">
