layout of exercises

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         height: calc(60px);
         height: 10%;
       }
+
+    .c-exercises {
+      height: 100%;
+    }
+
+      .c-exercises__current {
+        height: calc(100% - 60px);
+        height: 90%;
+      }
+
+      .c-exercises__next {
+        height: calc(60px);
+        height: 10%;
+      }
   </style>
   <body class="u-full-height">
     <div id="root" class="u-full-height">
