--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
       margin: 0;
       padding: 0;
     }
+
+    .o-vertically-centered {
+      height: 100%
+    }
+
+      .o-vertically-centered__content {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
     .u-full-height {
       height: 100%;
     }
