centering some more things

--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
         transform: translateY(-50%);
       }
 
-    .u-full-height {
-      height: 100%;
-    }
-
     .c-workout-display {
       height: 100%;
     }
@@ -51,6 +47,18 @@
         height: calc(60px);
         height: 10%;
       }
+
+    .c-current-exercise {
+      text-align: center;
+    }
+
+    .c-next-exercise {
+      text-align: center;
+    }
+
+    .u-full-height {
+      height: 100%;
+    }
   </style>
   <body class="u-full-height">
     <div id="root" class="u-full-height">
