--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
+      font-family: Helvetica;
     }
 
     .o-vertically-centered {
@@ -50,10 +51,12 @@
 
     .c-current-exercise {
       text-align: center;
+      font-size: 60px;
     }
 
     .c-next-exercise {
       text-align: center;
+      font-size: 40px;
     }
 
     .u-full-height {
