--- a/index.html
+++ b/index.html
@@ -42,17 +42,25 @@
       .c-exercises__current {
         height: calc(100% - 60px);
         height: 90%;
+        background-color: #F1F9FA;
+        color: #8BCBCA;
       }
 
       .c-exercises__next {
         height: calc(60px);
         height: 10%;
+        background-color: #FAF1EA;
+        color: #CB732B;
       }
 
     .c-current-exercise {
       text-align: center;
       font-size: 60px;
     }
+
+      .c-current-exercise__timer {
+        color: #38404A;
+      }
 
     .c-next-exercise {
       text-align: center;
