nice control icons

--- a/index.html
+++ b/index.html
@@ -80,10 +80,22 @@
       font-size: 40px;
     }
 
+    .c-controls {
+      font-size: 32px;
+      text-align: center;
+    }
+
+    .c-control {
+      cursor: pointer;
+      display: inline-block;
+      color: #89BC62;
+    }
+
     .u-full-height {
       height: 100%;
     }
   </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <body class="u-full-height">
     <div id="root" class="u-full-height">
     </div>
