--- a/index.html
+++ b/index.html
@@ -86,9 +86,14 @@
     }
 
     .c-control {
-      cursor: pointer;
       display: inline-block;
       color: #89BC62;
+      opacity: 0.5;
+    }
+
+    .c-control.is-enabled {
+      opacity: 1;
+      cursor: pointer;
     }
 
     .u-full-height {
