add skeleton workout definer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         transform: translateY(-50%);
       }
 
+    .c-layout {
+      display: flex;
+    }
+
+      .c-layout__workout-definer,
+      .c-layout__workout-display {
+        width: 50%;
+      }
+
     .c-workout-display {
       height: 100%;
     }
@@ -94,6 +103,14 @@
     .c-control.is-enabled {
       opacity: 1;
       cursor: pointer;
+    }
+
+    .c-workout-input {
+      width: 100%;
+      height: 400px;
+      margin:0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     .u-full-height {
